2000-12-10  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_control.c (ctl_putpeer): CP_TTL and CP_TTLMAX
	MDF_ACAST and MDF_MCAST cleanup.

	* ntpd/refclock_wwv.c (wwv_start): ttlmax/ttl cleanup.
	* ntpd/refclock_usno.c (usno_timeout): ttlmax/ttl cleanup.
	* ntpd/refclock_parse.c (CLK_REALTYPE): ttlmax/ttl cleanup.
	* ntpd/refclock_chu.c (chu_start): ttlmax/ttl cleanup.
	* ntpd/refclock_acts.c (acts_timeout): ttlmax/ttl cleanup.
	* ntpd/ntp_refclock.c (refclock_newpeer): Don't do the
	any_interface -> loopback_interface trick.
	* ntpd/ntp_proto.c (transmit): Broadcast/manycast cleanup.
	* ntpd/ntp_peer.c: Cleanup.
	* ntpd/ntp_io.c: Cleanup.
	* ntpd/ntp_crypto.c (crypto_recv): AUTOKEY based on BCLNT, not MCAST2.
	* include/ntpd.h: Declare findbcastinter().
	* include/ntp.h: struct peer's ttlmax is now max ttl/refclock
	mode.  ttl is now ttl for manycast mode.
	(FLAG_MCAST): Reworked several FLAG_ bits.
	From Dave Mills.

2000-12-05  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpq/ntpq.c: CP_TTLMAX support.
	* ntpd/ntp_proto.c (transmit): MDF_ACAST ttl fixes.
	* ntpd/ntp_peer.c (resetmanycast): Reset ttl if MDF_ACAST.
	(peer_config): Save max ttl in ttlmax.
	* ntpd/ntp_control.c: ttlmax support.
	* include/ntp_control.h (CP_TTLMAX): Added.
	* include/ntp.h: Added ttlmax to struct peer.
	Dave Mills.

2000-12-03  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c (receive): That any_interface is now an
	rbufp->dstadr.
	Various other doc and code cleanup.
	* ntpd/ntp_peer.c (findmanycastpeer): Fixes
	From Dave Mills

2000-12-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_request.c (do_conf): call peer_config with
	any_interface, not 0.
	* ntpd/ntp_proto.c (transmit): Manycast cleanup
	* ntpd/ntp_peer.c (findmanycastpeer): manycast cleanup
	* ntpd/ntp_io.c (sendpkt): Only check ttl if we have a ttl
	(findinterface): Cleanup
	* ntpd/ntp_control.c: cleanup
	* include/ntpd.h: Added resetmanycast.
	* include/ntp_control.h (CP_TTL): disp -> ttl